@@ -11,6 +11,9 @@ import com.ktb.chatapp.service.MessageReadStatusService;
 import jakarta.annotation.Nullable;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -68,12 +71,28 @@ public class MessageLoader {
         messageReadStatusService.updateReadStatus(messageIds, userId);
         
         // 메시지 응답 생성
+        Set<String> senderIds = sortedMessages.stream()
+                .map(Message::getSenderId)
+                .collect(Collectors.toSet());
+
+        Map<String, User> usersById = userRepository.findAllById(senderIds)
+                .stream()
+                .collect(Collectors.toMap(
+                        User::getId,
+                        Function.identity()
+                ));
+
+        // 메시지 응답 생성
         List<MessageResponse> messageResponses = sortedMessages.stream()
                 .map(message -> {
-                    var user = findUserById(message.getSenderId());
-                    return messageResponseMapper.mapToMessageResponse(message, user);
+                    User user = usersById.get(message.getSenderId());
+
+                    return messageResponseMapper.mapToMessageResponse(
+                            message,
+                            user
+                    );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         boolean hasMore = messagePage.hasNext();
 
